--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -2,3 +2,10 @@
   width: 142px;
   height: 33px;
 }
+
+@media screen and (max-width: 900px) {
+  .header__logo {
+    width: 104px;
+    height: 24px;
+  }
+}
