--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -4,3 +4,9 @@
   padding: 45px 0 60px;
   box-sizing: border-box;
 }
+
+@media screen and (max-width: 930px) {
+  .page {
+    padding: 28px 19px 36px;
+  }
+}
