--- a/blocks/profile/__info-container/profile__info-container.css
+++ b/blocks/profile/__info-container/profile__info-container.css
@@ -2,3 +2,10 @@
   display: flex;
   align-items: center;
 }
+
+@media screen and (max-width: 705px) {
+  .profile {
+    flex-direction: column;
+    justify-content: center;
+  }
+}
