--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -6,3 +6,10 @@
   justify-content: space-between;
   align-items: center;
 }
+
+@media screen and (max-width: 705px) {
+  .profile {
+    flex-direction: column;
+    justify-content: center;
+  }
+}
