--- a/blocks/profile/__heading/profile__heading.css
+++ b/blocks/profile/__heading/profile__heading.css
@@ -7,3 +7,11 @@
   color: #fff;
   margin: 0 0 16px;
 }
+
+@media screen and (max-width: 705px) {
+  .profile__heading {
+    text-align: center;
+    font-size: 27px;
+    line-height: 1.22;
+  }
+}
