--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,3 +1,9 @@
 .profile__info {
   margin-left: 30px;
 }
+
+@media screen and (max-width: 705px) {
+  .profile__info {
+    text-align: center;
+  }
+}
