--- a/blocks/button/button.css
+++ b/blocks/button/button.css
@@ -1,5 +1,12 @@
 .button {
-  background-color: #000;
+  background-color: rgba(0, 0, 0, 0);
   padding: 0;
   border: none;
+  -webkit-transition: opacity ease 0.2s;
+  -o-transition: opacity ease 0.2s;
+  transition: opacity ease 0.2s;
+}
+
+.button:hover {
+  opacity: 0.6;
 }
