--- a/pages/index.css
+++ b/pages/index.css
@@ -24,3 +24,10 @@
 @import url(../blocks/button/_action/button_action_like.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
+@import url(../blocks/popap/popap.css);
+@import url(../blocks/popap/_opened/popap_opened.css);
+@import url(../blocks/popap/__container/popap__container.css);
+@import url(../blocks/popap/__title/popap__title.css);
+@import url(../blocks/popap/__input-text/popap__input-text.css);
+@import url(../blocks/popap/__submit/popap__submit.css);
+@import url(../blocks/popap/__button-close/popap__button-close.css);
