--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,4 +1,4 @@
-.popap__container {
+.popup__container {
   width: 430px;
   height: 330px;
   background-color: #fff;
@@ -7,4 +7,12 @@
   padding: 34px 36px 37px;
   box-sizing: border-box;
   position: relative;
+}
+
+@media screen and (max-width: 560px) {
+  .popup__container {
+    width: 282px;
+    height: 322px;
+    padding: 25px 22px;
+  }
 }
