--- a/blocks/popup/__submit/popup__submit.css
+++ b/blocks/popup/__submit/popup__submit.css
@@ -1,4 +1,4 @@
-.popap__submit {
+.popup__submit {
   margin-top: 48px;
   width: 100%;
   height: 50px;
@@ -10,4 +10,11 @@
   line-height: 1.22;
   text-align: center;
   color: #fff;
+}
+
+@media screen and (max-width: 560px) {
+  .popup__submit {
+    font-size: 14px;
+    line-height: 1.21;
+  }
 }
