--- a/blocks/profile/__heading-container/profile__heading-container.css
+++ b/blocks/profile/__heading-container/profile__heading-container.css
@@ -1,4 +1,8 @@
 .profile__heading-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: baseline;
+  -ms-flex-align: baseline;
   align-items: baseline;
 }
