--- a/blocks/button/_action/button_action_add.css
+++ b/blocks/button/_action/button_action_add.css
@@ -1,6 +1,6 @@
 .button_action_add {
-  width: 150px;
-  height: 50px;
+  min-width: 150px;
+  min-height: 50px;
   background-image: url(../../../images/add-btn.svg);
   background-repeat: no-repeat;
   background-position: center center;
