--- a/blocks/element/__image/element__image.css
+++ b/blocks/element/__image/element__image.css
@@ -1,6 +1,7 @@
 .element__image {
   width: 100%;
   min-height: 282px;
+  -o-object-fit: cover;
   object-fit: cover;
   border-radius: 10px 10px 0 0;
 }
