--- a/blocks/element/__tittle/element__title.css
+++ b/blocks/element/__tittle/element__title.css
@@ -5,4 +5,8 @@
   line-height: 1.2;
   color: #000;
   margin: 0;
+  -o-text-overflow: ellipsis;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
