--- a/blocks/elements/__list/elements__list.css
+++ b/blocks/elements/__list/elements__list.css
@@ -1,6 +1,9 @@
 .elements__list {
+  display: -ms-grid;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
+  -webkit-column-gap: 17px;
+  -moz-column-gap: 17px;
   column-gap: 17px;
   row-gap: 20px;
   justify-items: center;
