--- a/blocks/profile/__heading/profile__heading.css
+++ b/blocks/profile/__heading/profile__heading.css
@@ -6,9 +6,14 @@
   line-height: 1.14;
   color: #fff;
   margin: 0 0 16px;
+  -o-text-overflow: ellipsis;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 380px;
 }
 
-@media screen and (max-width: 705px) {
+@media screen and (max-width: 785px) {
   .profile__heading {
     text-align: center;
     font-size: 27px;
