--- a/blocks/profile/__subheading/profile__subheading.css
+++ b/blocks/profile/__subheading/profile__subheading.css
@@ -6,15 +6,21 @@
   font-size: 18px;
   line-height: 1.22;
   margin: 0;
+  max-width: 350px;
+  -o-text-overflow: ellipsis;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
-@media screen and (max-width: 705px) {
+@media screen and (max-width: 785px) {
   .profile__subheading {
     text-align: center;
     font-size: 14px;
     line-height: 1.21;
     margin-bottom: 36px;
     padding-right: 25px;
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
   }
 }
