Добавить анимацию попапу

--- a/blocks/button/_action/button_action_like.css
+++ b/blocks/button/_action/button_action_like.css
@@ -4,3 +4,5 @@
   background-image: url(../../../images/heart.svg);
   background-color: #fff;
 }
+
+/* для активного состояния - см. button_active_like */
