--- a/pages/index.css
+++ b/pages/index.css
@@ -22,6 +22,7 @@
 @import url(../blocks/element/__image/element__image.css);
 @import url(../blocks/element/__footer/element__footer.css);
 @import url(../blocks/button/_action/button_action_like.css);
+@import url(../blocks/button/_active/button_active_like.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 @import url(../blocks/popup/popup.css);
