--- a/blocks/element/__image/element__image.css
+++ b/blocks/element/__image/element__image.css
@@ -2,6 +2,7 @@
   width: 100%;
   min-height: 282px;
   -o-object-fit: cover;
-  object-fit: cover;
   border-radius: 10px 10px 0 0;
+  object-fit: cover;
+  background-position: center center;
 }
