--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -4,3 +4,9 @@
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
+
+@media screen and (max-width: 940px) {
+  .elements {
+    padding: 36px 19px 0;
+  }
+}
