--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -6,3 +6,10 @@
   color: #545454;
   margin: 0;
 }
+
+@media screen and (max-width: 940px) {
+  .footer__copyright {
+    margin-left: 19px;
+    font-size: 14px;
+  }
+}
