--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,4 +1,11 @@
 .footer {
-  padding-top: 66px;
+  padding-top: 57px;
   width: 100%;
+  flex-shrink: 0;
+}
+
+@media screen and (max-width: 940px) {
+  .footer {
+    padding-top: 48px;
+  }
 }
