--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -3,9 +3,10 @@
   height: 33px;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 941px) {
   .header__logo {
     width: 104px;
     height: 24px;
+    margin-left: 27px;
   }
 }
