--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,12 @@
 .header {
   width: 100%;
   min-height: 74px;
-  border-bottom: 1px solid #545454;
-  opacity: 0.7;
+  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
+  box-sizing: border-box;
+}
+
+@media screen and (max-width: 940px) {
+  .header {
+    min-height: 56px;
+  }
 }
