--- a/blocks/popup/__button-close/popup__button-close.css
+++ b/blocks/popup/__button-close/popup__button-close.css
@@ -1,18 +1,22 @@
 .popup__button-close {
-  background-image: url('../../../images/Close\ Icon.svg');
+  background-image: url('../../../images/btn-close.svg');
   width: 32px;
   height: 32px;
   position: absolute;
-  top: -35px;
-  right: -35px;
+  top: -32px;
+  right: -40px;
   background-size: contain;
+}
+
+.popup__button-close:hover {
+  opacity: 0.6;
 }
 
 @media screen and (max-width: 560px) {
   .popup__button-close {
     width: 20px;
     height: 20px;
-    top: -25px;
-    right: -25px;
+    top: -26px;
+    right: 0;
   }
 }
