--- a/blocks/popup/__submit/popup__submit.css
+++ b/blocks/popup/__submit/popup__submit.css
@@ -10,6 +10,11 @@
   line-height: 1.22;
   text-align: center;
   color: #fff;
+  border: none;
+}
+
+.popup__submit:hover {
+  opacity: 0.8;
 }
 
 @media screen and (max-width: 560px) {
