--- a/blocks/profile/__heading/profile__heading.css
+++ b/blocks/profile/__heading/profile__heading.css
@@ -5,18 +5,19 @@
   font-size: 42px;
   line-height: 1.14;
   color: #fff;
-  margin: 0 0 16px;
+  margin: 0;
   -o-text-overflow: ellipsis;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
   max-width: 380px;
+  grid-area: 'title';
 }
 
-@media screen and (max-width: 785px) {
+@media screen and (max-width: 940px) {
   .profile__heading {
     text-align: center;
     font-size: 27px;
-    line-height: 1.22;
+    line-height: 1.21;
   }
 }
