--- a/pages/index.css
+++ b/pages/index.css
@@ -3,17 +3,18 @@
 @import url(../blocks/root/root.css);
 @import url(../blocks/page/page.css);
 @import url(../blocks/text-smoothing/text-smoothing.css);
+@import url(../blocks/main/main.css);
 @import url(../blocks/header/header.css);
+@import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/profile/__avatar/profile__avatar.css);
 @import url(../blocks/profile/__info/profile__info.css);
 @import url(../blocks/profile/__heading/profile__heading.css);
 @import url(../blocks/profile/__subheading/profile__subheading.css);
-@import url(../blocks/button/_action/button_action_edit.css);
+@import url(../blocks/profile/__button-edit/profile__button-edit.css);
 @import url(../blocks/profile/__info-container/profile__info-container.css);
-@import url(../blocks/profile/__heading-container/profile__heading-container.css);
+@import url(../blocks/profile/__button-add/profile__button-add.css);
 @import url(../blocks/button/button.css);
-@import url(../blocks/button/_action/button_action_add.css);
 @import url(../blocks/elements/elements.css);
 @import url(../blocks/elements/__list/elements__list.css);
 @import url(../blocks/list/list.css);
@@ -21,7 +22,7 @@
 @import url(../blocks/element/__title/element__title.css);
 @import url(../blocks/element/__image/element__image.css);
 @import url(../blocks/element/__footer/element__footer.css);
-@import url(../blocks/button/_action/button_action_like.css);
+@import url(../blocks/element/__like/element__button-like.css);
 @import url(../blocks/button/_active/button_active_like.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
