--- a/blocks/profile/__heading/profile__heading.css
+++ b/blocks/profile/__heading/profile__heading.css
@@ -1,4 +1,5 @@
 .profile__heading {
+  max-width: 370px;
   font-family: 'Inter', 'Helvetica Neue', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -10,7 +11,6 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  max-width: 380px;
   grid-area: 'title';
 }
 
@@ -19,5 +19,12 @@
     text-align: center;
     font-size: 27px;
     line-height: 1.21;
+    max-width: 300px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .profile__heading {
+    max-width: 250px;
   }
 }
