Add trash button

--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -9,6 +9,7 @@
   -ms-flex-direction: column;
   flex-direction: column;
   justify-self: center;
+  position: relative;
 }
 
 @media screen and (min-width: 620px) {
