--- a/blocks/element/__button-like/_active/element__button-like_active.css
+++ b/blocks/element/__button-like/_active/element__button-like_active.css
@@ -1,4 +1,4 @@
 /* модификатор активного состояния кнопки button_action_like */
 .element__button-like_active {
-  background-image: url(../../../images/heart-black.svg);
+  background-image: url(../../../../images/like-active.svg);
 }
