--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -2,6 +2,8 @@
   width: 120px;
   height: 120px;
   border-radius: 50%;
+  object-fit: cover;
+  background-position: center center;
 }
 
 @media screen and (max-width: 940px) {
