--- a/pages/index.css
+++ b/pages/index.css
@@ -23,7 +23,6 @@
 @import url(../blocks/element/__image/element__image.css);
 @import url(../blocks/element/__button-trash/element__button-trash.css);
 @import url(../blocks/element/__footer/element__footer.css);
-
 @import url(../blocks/element/__button-like/element__button-like.css);
 @import url(../blocks/element/__button-like/_active/element__button-like_active.css);
 @import url(../blocks/footer/footer.css);
@@ -35,3 +34,6 @@
 @import url(../blocks/popup/__input-text/popup__input-text.css);
 @import url(../blocks/popup/__submit/popup__submit.css);
 @import url(../blocks/popup/__button-close/popup__button-close.css);
+@import url(../blocks/popup/__container-image/popup__container-image.css);
+@import url(../blocks/popup/__image/popup__image.css);
+@import url(../blocks/popup/__title-image/popup__title-image.css);
