--- a/src/blocks/popup/__input-error/popup__input-error.css
+++ b/src/blocks/popup/__input-error/popup__input-error.css
@@ -4,6 +4,8 @@
   font-weight: 400;
   font-size: 12px;
   line-height: 1.21;
-  margin: 5px 0 0 0;
-  display: none;
+  margin: 5px 0 0;
+  display: inline-block;
+  min-height: 25px;
+  visibility: hidden;
 }
