--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -41,3 +41,4 @@
 @import url(../blocks/popup/__input-error/popup__input-error.css);
 @import url(../blocks/popup/__input-error/_active/popup__input-error_active.css);
 @import url(../blocks/popup/__input-text/_invalid/popup__input-text_invalid.css);
+@import url(../blocks/popup/_type/popup_type_image.css);
