--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -42,3 +42,11 @@
 @import url(../blocks/popup/__input-error/_active/popup__input-error_active.css);
 @import url(../blocks/popup/__input-text/_invalid/popup__input-text_invalid.css);
 @import url(../blocks/popup/_type/popup_type_image.css);
+@import url(../blocks/popup/__container/_confirm/popup__container_confirm.css);
+@import url(../blocks/popup/__title/_confirm/popup__title_confirm.css);
+@import url(../blocks/element/__counter/element__counter.css);
+@import url(../blocks/element/__like-container/element__like-container.css);
+@import url(../blocks/element/__button-trash/_hidden/element__button-trash_hidden.css);
+@import url(../blocks/profile/__avatar-container/profile__avatar-container.css);
+@import url(../blocks/profile/__avatar-icon/profile__avatar-icon.css);
+@import url(../blocks/profile/__avatar-overlay/profile__avatar-overlay.css);
