--- a/main.css
+++ b/main.css
@@ -37,7 +37,7 @@
 /*!*************************************************************************************************************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[2].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/profile/__avatar/profile__avatar.css ***!
   \*************************************************************************************************************************************************************************/
-.profile__avatar{background-position:50%;border-radius:50%;height:120px;-o-object-fit:cover;object-fit:cover;width:120px}@media screen and (max-width:940px){.profile__avatar{margin-bottom:26px}}
+.profile__avatar{background-position:50%;border-radius:50%;height:120px;-o-object-fit:cover;object-fit:cover;position:relative;width:120px;z-index:0}@media screen and (max-width:940px){.profile__avatar{margin-bottom:26px}}
 /*!*********************************************************************************************************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[2].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/profile/__info/profile__info.css ***!
   \*********************************************************************************************************************************************************************/
@@ -137,15 +137,15 @@
 /*!*********************************************************************************************************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[2].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/popup/__submit/popup__submit.css ***!
   \*********************************************************************************************************************************************************************/
-.popup__submit{background:#000;border:none;border-radius:2px;color:#fff;font-family:Inter,Helvetica Neue,Arial,sans-serif;font-size:18px;font-weight:400;height:50px;line-height:1.22;margin:23px 0 0;text-align:center;width:100%}.popup__submit:hover{opacity:.8}@media screen and (max-width:560px){.popup__submit{font-size:14px;line-height:1.21}}
+.popup__submit{background:#000;border:none;border-radius:2px;color:#fff;font-family:Inter,Helvetica Neue,Arial,sans-serif;font-size:18px;font-weight:400;height:50px;line-height:1.22;margin:18px 0 0;text-align:center;width:100%}.popup__submit:hover{opacity:.8}@media screen and (max-width:560px){.popup__submit{font-size:14px;line-height:1.21}}
 /*!*********************************************************************************************************************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[2].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/popup/__button-close/popup__button-close.css ***!
   \*********************************************************************************************************************************************************************************/
 .popup__button-close{background-color:transparent;background-image:url(039f1f5203f653b4bacd.svg);background-size:contain;border:none;height:32px;position:absolute;right:-40px;top:-32px;width:32px}.popup__button-close:hover{opacity:.6}@media screen and (max-width:560px){.popup__button-close{height:20px;right:0;top:-36px;width:20px}}
-/*!***************************************************************************************************************************************************************************************!*\
-  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[2].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/popup/__container-image/popup__container-image.css ***!
-  \***************************************************************************************************************************************************************************************/
-.popup__container-image{max-height:75vh;max-width:75vw;position:relative}
+/*!********************************************************************************************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[2].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/popup/__container/_type/popup__container_type_image.css ***!
+  \********************************************************************************************************************************************************************************************/
+.popup__container_type_image{max-height:75vh;max-width:75vw;position:relative}
 /*!*******************************************************************************************************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[2].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/popup/__image/popup__image.css ***!
   \*******************************************************************************************************************************************************************/
@@ -174,6 +174,42 @@
   !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[2].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/popup/_type/popup_type_image.css ***!
   \*********************************************************************************************************************************************************************/
 .popup_type_image{background-color:rgba(0,0,0,.9)}
+/*!**********************************************************************************************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[2].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/popup/__container/_type/popup__container_type_confirm.css ***!
+  \**********************************************************************************************************************************************************************************************/
+.popup__container_type_confirm{box-sizing:border-box;min-height:181px;min-width:430px}
+/*!************************************************************************************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[2].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/popup/__title/_confirm/popup__title_confirm.css ***!
+  \************************************************************************************************************************************************************************************/
+.popup__title_confirm{margin-bottom:15px}
+/*!***************************************************************************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[2].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/element/__counter/element__counter.css ***!
+  \***************************************************************************************************************************************************************************/
+.element__counter{color:#000;font-family:Inter,Helvetica Neue,Arial,sans-serif;font-size:13px;font-weight:400;line-height:1.21;margin-top:3px}
+/*!*****************************************************************************************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[2].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/element/__like-container/element__like-container.css ***!
+  \*****************************************************************************************************************************************************************************************/
+.element__like-container{align-items:center;display:flex;flex-direction:column;justify-content:center}
+/*!****************************************************************************************************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[2].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/element/__button-trash/_hidden/element__button-trash_hidden.css ***!
+  \****************************************************************************************************************************************************************************************************/
+.element__button-trash_hidden{visibility:hidden}
+/*!*********************************************************************************************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[2].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/profile/__avatar-container/profile__avatar-container.css ***!
+  \*********************************************************************************************************************************************************************************************/
+.profile__avatar-container{height:120px;position:relative;width:120px}.profile__avatar-container::hover.profile__avatar-overlay{opacity:1}
+/*!***********************************************************************************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[2].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/profile/__avatar-icon/profile__avatar-icon.css ***!
+  \***********************************************************************************************************************************************************************************/
+.profile__avatar-icon{display:block;left:40%;position:absolute;top:40%}
+/*!*****************************************************************************************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[2].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/profile/__avatar-overlay/profile__avatar-overlay.css ***!
+  \*****************************************************************************************************************************************************************************************/
+.profile__avatar-overlay{background-color:rgba(0,0,0,.8);bottom:0;height:100%;opacity:0;position:absolute;top:0;transition:.3s ease;width:100%}.profile__avatar-overlay:hover{opacity:1}
+/*!*********************************************************************************************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[2].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/blocks/popup/__container/_type/popup__container_type_avatar.css ***!
+  \*********************************************************************************************************************************************************************************************/
+.popup__container_type_avatar{min-height:272px}
 /*!*********************************************************************************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[2].use[1]!./node_modules/postcss-loader/dist/cjs.js!./src/pages/index.css ***!
   \*********************************************************************************************************************************************/
